# evm-disassembler

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
src/: decode.rs  lib.rs  test_utils.rs  types.rs
testdata/: .txt  usdc_encoded.txt  weth_encoded.txt
