[package]
name = "evm-disassembler"
version = "0.1.0"
authors = ["Christian Koopmann <c.k.e.koopmann@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
documentation = "https://docs.rs/evm-disassembler"
repository = "https://github.com/ckoopmann/evm-disassembler"
homepage = "https://docs.rs/evm_disassembler"
description = """
Disassemble EVM bytecode into individual Opcodes and format into human readable strings.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
hex = "0.4.3"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
ethers = "2.0.0"
rstest = "0.16.0"
tokio = { version = "1.26.0", features = ["full"] }
